js262/test/language/statements/let/syntax/with-initialisers-in-statement-positions-do-statement-while-expression.js


/*---
es6id: 13.1
description: >
    let declarations with initialisers in statement positions:
    do Statement while ( Expression )
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();
do let x = 1; while (false)
